add patientList page

--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@types/react-dom": "^18.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
@@ -43,6 +45,7 @@
   },
   "devDependencies": {
     "json-server": "^0.17.0",
+    "redux-devtools-extension": "^2.13.9",
     "typescript-plugin-css-modules": "^3.4.0"
   }
 }
